2015-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.8 release.

        * NEWS: Added release notes for 2.4.8.

2014-10-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.7 release.

        * NEWS: Added release notes for 2.4.7.

2014-09-25  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.6 release.

        * NEWS: Added release notes for 2.4.6.

2014-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.5 release.

        * NEWS: Added release notes for 2.4.5.

2014-07-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.4 release.

        * NEWS: Added release notes for 2.4.4.

2014-07-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][Stable] Google Maps doesn't work with Version/X in the user agent
        https://bugs.webkit.org/show_bug.cgi?id=134631

        Reviewed by Sergio Villar Senin.

        Remove user agent quirks for google domains, since they are now
        implemented in WebCore.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::userAgent): Pass the WebCore::URL
        const reference to webkitWebSettingsUserAgentForURI().
        * webkit/webkitwebsettings.cpp:
        (webkitWebSettingsUserAgentForURI): Use
        WebCore::standardUserAgentForURL() when site specific quirks are enabled.
        * webkit/webkitwebsettingsprivate.h:

2014-05-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.3 release.

        * NEWS: Added release notes for 2.4.3.

2014-05-12  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.2 release.

        * NEWS: Added release notes for 2.4.2.

2014-04-14  Carlos Garcia Campos  <cgarcia@igalia.com>
