@@ -1,3 +1,12 @@
+2015-02-16  Milan Crha  <mcrha@redhat.com>
+
+        [GTK] Memory leak from webkit_web_policy_decision_new()
+        https://bugs.webkit.org/show_bug.cgi?id=141564
+
+        Reviewed by Carlos Garcia Campos.
+
+        * webkit/webkitwebpolicydecision.cpp:
+
 2015-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Update NEWS and Versions.m4 for 2.4.8 release.
